# xgbpid

./: .gitignore  README.md  dashboard.py  main.py  plan.md  pyproject.toml  runner.py
.devcontainer/: devcontainer.json
configs/: experiment_v1.yaml
public/: dashboard.py  requirements.txt
scripts/: train.py
xgbpid/core/: __init__.py  daq.py  inference.py  processor.py  redpitaya_scpi.py  relay.py
